--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "hbs": "~4.0.1",
+    "helmet": "^3.18.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0"
   }
