--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hbs": "~4.0.1",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.2",
+    "mongodb": "^3.2.7",
     "morgan": "~1.9.0"
   }
 }
