GM: Registration API

--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "clean": "rimraf build"
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.1",
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "hbs": "~4.0.1",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.2",
-    "mongodb": "^3.2.7",
+    "mongodb": "^3.3.2",
+    "mongoose": "^5.7.0",
     "morgan": "~1.9.0",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
