--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "fs": "0.0.1-security",
     "hbs": "~4.0.1",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.2",
+    "is-base64": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.0",
     "morgan": "~1.9.0",
